Chore: Fix templete sync workflow

--- a/.github/workflows/templete-sync.yaml
+++ b/.github/workflows/templete-sync.yaml
@@ -1,4 +1,4 @@
-# File: .github/workflows/template-sync.yml
+name: Template Sync
 
 on:
   # cronjob trigger
@@ -18,6 +18,6 @@ jobs:
         uses: AndreasAugustin/actions-template-sync@v0.8.0
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_repo_path: <owner/repo>
+          source_repo_path: ashleve/lightning-hydra-template
           upstream_branch: <target_branch> # defaults to main
           pr_labels: <label1>,<label2>[,...] # optional, no default
