--- a/.github/workflows/templete-sync.yaml
+++ b/.github/workflows/templete-sync.yaml
@@ -19,5 +19,5 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           source_repo_path: ashleve/lightning-hydra-template
-          upstream_branch: <target_branch> # defaults to main
-          pr_labels: <label1>,<label2>[,...] # optional, no default
+          upstream_branch: main # defaults to main
+          pr_labels: Chore, template-sync # optional, no default
