--- a/.github/workflows/templete-sync.yaml
+++ b/.github/workflows/templete-sync.yaml
@@ -20,4 +20,4 @@ jobs:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           source_repo_path: ashleve/lightning-hydra-template
           upstream_branch: main # defaults to main
-          pr_labels: Chore, template-sync # optional, no default
+          pr_labels: template-sync # optional, no default
