--- a/configs/debug/memleak.yaml
+++ b/configs/debug/memleak.yaml
@@ -10,5 +10,5 @@ trainer:
   # limit_train_batches: 0.5
   fast_dev_run: 300
   profiler:
-    _target_: pytorch_lightning.profiler.PyTorchProfiler
+    _target_: lightning.pytorch.profilers.PyTorchProfiler
     profile_memory: True
