--- a/requirements.txt
+++ b/requirements.txt
@@ -5,15 +5,11 @@ lightning>=2.0.0
 torchmetrics>=0.11.4
 
 # --------- hydra --------- #
-hydra-core==1.3.2
+hydra-zen==0.11.0
 hydra-colorlog==1.2.0
-hydra-optuna-sweeper==1.2.0
 
 # --------- loggers --------- #
-# wandb
-# neptune-client
-# mlflow
-# comet-ml
+wandb
 # aim>=3.16.2  # no lower than 3.16.2, see https://github.com/aimhubio/aim/issues/2550
 
 # --------- others --------- #
