--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ lightning>=2.0.0
 torchmetrics>=0.11.4
 
 # --------- hydra --------- #
-hydra-zen==0.11.0
+hydra-core==1.3.2
 hydra-colorlog==1.2.0
 
 # --------- loggers --------- #
