--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -40,10 +40,12 @@ train: True
 
 # evaluate on test set, using best model weights achieved during training
 # lightning chooses best weights based on the metric specified in checkpoint callback
-test: True
+test: False
 
 # simply provide checkpoint path to resume training
 ckpt_path: null
 
 # seed for random number generators in pytorch, numpy and python.random
 seed: null
+
+compile: null
