--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,3 +30,14 @@ line_length = 100
 
 [tool.black]
 line-length = 100
+
+[tool.interrogate]
+ignore-init-method = true
+ignore-init-module = false
+ignore-magic = false
+ignore-semiprivate = false
+ignore-private = false
+ignore-setters = false
+exclude = ["setup.py", "docs", "build"]
+generate-badge = "."
+badge-format = "svg"
