--- a/.github/workflows/code-quality-main.yaml
+++ b/.github/workflows/code-quality-main.yaml
@@ -32,7 +32,8 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
-        python-version: ${{ matrix.python-version }}
+        os: ["ubuntu-22.04"]
+        python-version: ["3.10", "3.11"]
 
     steps:
       - uses: actions/checkout@v3
