--- a/.github/workflows/code-quality-pr.yaml
+++ b/.github/workflows/code-quality-pr.yaml
@@ -23,14 +23,20 @@ jobs:
         with:
           python-version: "3.10"
 
-      - name: Find modified files
-        id: file_changes
-        uses: trilom/file-changes-action@v1.2.4
-        with:
-          output: " "
+      - name: Get changed files
+              id: changed-files
+              uses: tj-actions/changed-files@v42
+              # To compare changes between the current commit and the last pushed remote commit set `since_last_remote_commit: true`. e.g
+              # with:
+              #   since_last_remote_commit: true 
 
-      - name: List modified files
-        run: echo '${{ steps.file_changes.outputs.files}}'
+      - name: List all changed files
+        env:
+          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+        run: |
+          for file in ${ALL_CHANGED_FILES}; do
+            echo "$file was changed"
+          done
 
       - name: Run pre-commits
         uses: pre-commit/action@v2.0.3
