Feat/hydra zen0 (#7)
* Add debug option for FDR in Makefile and set seed value in train.yaml

* Feat: Change data and model config to hydra-zen

* Chore: Update code-quality-pr.yaml and test.yml

* Refactor code and fix formatting issues

* Feat: Add EqProp model config and fix threshold_mode in ReduceLROnPlateauConfig

* Add various eqprop, model scheduler and optimizer configurations

* Feat: Add XORDataModule and update logger in eval.yaml

* Refactor eqprop_util.py and fix import in eval.py and train.py

* Update project structure and configurations

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,4 +17,5 @@ rootutils       # standardizing the project root setup
 pre-commit      # hooks for applying linters on commit
 rich            # beautiful text formatting in terminal
 pytest          # tests
+beartype        # runtime type checking
 # sh            # for running bash commands in some tests (linux/macos only)
