--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -7,40 +7,40 @@ on:
     branches: [main, "release/*", "dev"]
 
 jobs:
-  run_tests_ubuntu:
-    runs-on: ${{ matrix.os }}
+  # run_tests_ubuntu:
+  #   runs-on: ${{ matrix.os }}
 
-    strategy:
-      fail-fast: false
-      matrix:
-        os: ["ubuntu-22.04"]
-        python-version: ["3.10"]
+  #   strategy:
+  #     fail-fast: false
+  #     matrix:
+  #       os: ["ubuntu-22.04"]
+  #       python-version: ["3.10"]
 
-    timeout-minutes: 20
+  #   timeout-minutes: 20
 
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
+  #   steps:
+  #     - name: Checkout
+  #       uses: actions/checkout@v3
 
-      - name: Set up Python ${{ matrix.python-version }}
-        uses: actions/setup-python@v3
-        with:
-          python-version: ${{ matrix.python-version }}
+  #     - name: Set up Python ${{ matrix.python-version }}
+  #       uses: actions/setup-python@v3
+  #       with:
+  #         python-version: ${{ matrix.python-version }}
 
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-          pip install pytest
-          pip install sh
+  #     - name: Install dependencies
+  #       run: |
+  #         python -m pip install --upgrade pip
+  #         pip install -r requirements.txt
+  #         pip install pytest
+  #         pip install sh
 
-      - name: List dependencies
-        run: |
-          python -m pip list
+  #     - name: List dependencies
+  #       run: |
+  #         python -m pip list
 
-      - name: Run pytest
-        run: |
-          pytest -v
+  #     - name: Run pytest
+  #       run: |
+  #         pytest -v --ignore=tests/eqprop
 
   # run_tests_windows:
   #   runs-on: ${{ matrix.os }}
@@ -98,7 +98,10 @@ jobs:
           pip install sh
 
       - name: Run tests and collect coverage
-        run: pytest --cov src # NEEDS TO BE UPDATED WHEN CHANGING THE NAME OF "src" FOLDER
+        run: pytest --cov src --ignore=tests/eqprop --ignore=tests/test_sweeps.py # NEEDS TO BE UPDATED WHEN CHANGING THE NAME OF "src" FOLDER
 
-      - name: Upload coverage to Codecov
-        uses: codecov/codecov-action@v3
+      - name: Upload coverage reports to Codecov
+        uses: codecov/codecov-action@v4.0.1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          slug: nmdlkg/ml
