--- a/configs/experiment/eqprop.yaml
+++ b/configs/experiment/eqprop.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /data: mnist
-  - override /model: mnist_eqprop
+  - override /model: ep-mnist
   - override /trainer: default
   - override /callbacks: default
 
@@ -23,8 +23,6 @@ logger:
   wandb:
     tags: ${tags}
     group: "mnist"
-  aim:
-    experiment: "mnist"
 
 callbacks:
   eqprop_track: eqprop_track
