--- a/configs/hparams_search/mnist_optuna.yaml
+++ b/configs/hparams_search/mnist_optuna.yaml
@@ -5,6 +5,8 @@
 
 defaults:
   - override /hydra/sweeper: optuna
+  - override /hydra/launcher: joblib
+  - override /trainer: gpu.yaml
 
 # choose metric which will be optimized by Optuna
 # make sure this is the correct name of some metric logged in lightning module!
@@ -45,7 +47,8 @@ hydra:
 
     # define hyperparameter search space
     params:
-      model.optimizer.lr: interval(0.0001, 0.1)
+      model.optimizer.lr: tag(log,interval(0.0001, 0.1))
+      model.optimizer.weight_decay: tag(log,interval(1e-6, 1e-3))
       data.batch_size: choice(32, 64, 128, 256)
       model.net.lin1_size: choice(64, 128, 256)
       model.net.lin2_size: choice(64, 128, 256)
