Fix GitHub Actions workflow to skip no commit to main branch when merge to main (#10)
Update GitHub Actions workflow to skip no commit to main branch pre-commits

--- a/.github/workflows/code-quality-main.yaml
+++ b/.github/workflows/code-quality-main.yaml
@@ -26,6 +26,8 @@ jobs:
 
       - name: Run pre-commits
         uses: pre-commit/action@v2.0.3
+        env:
+          SKIP: no-commit-to-branch
   build:
     name: Perform CI Checks
     needs: code-quality
