--- a/configs/logger/wandb.yaml
+++ b/configs/logger/wandb.yaml
@@ -7,7 +7,7 @@ wandb:
   offline: False
   id: null # pass correct id to resume experiment!
   anonymous: null # enable anonymous logging
-  project: ??? # you have to specify the project name in local config
+  project: ??? # you have to specify the project name in local config see configs/local/example.yaml
   log_model: False # upload lightning ckpts
   prefix: "" # a string to put at the beginning of metric keys
   # entity: "" # set to name of your wandb team
