feat: Add MSELitModule , Rename old&new eqprop backbone cls/cfgs

--- a/configs/experiment/eqprop.yaml
+++ b/configs/experiment/eqprop.yaml
@@ -1,7 +1,7 @@
 # @package _global_
 defaults:
   - override /data: mnist
-  - override /model: ep-mnist
+  - override /model: dep-mnist
   - override /trainer: default
   - override /callbacks: default
 
