--- a/configs/experiment/direct_eqprop.yaml
+++ b/configs/experiment/direct_eqprop.yaml
@@ -1,7 +1,9 @@
 # @package _global_
 defaults:
-  - override /model/net: ep-mnist
-  - override /callbacks: eqprop_track
+  - override /data: mnist
+  - override /model: dep-mnist
+  - override /trainer: default
+  - override /callbacks: default
 
 # all parameters below will be merged with parameters from default configurations set above
 # this allows you to overwrite only specified parameters
@@ -17,11 +19,10 @@ trainer:
 data:
   batch_size: 64
 
-model:
-  net:
-    bias: True
-
 logger:
   wandb:
     tags: ${tags}
     group: "mnist"
+
+callbacks:
+  eqprop_track: eqprop_track
