--- a/environment.yaml
+++ b/environment.yaml
@@ -21,7 +21,8 @@ channels:
 # compatibility is usually guaranteed
 
 dependencies:
-  - python=3.10
+  - aihwkit-gpu
+  - python>=3.10
   - pytorch=2.* #
   - torchvision=0.*
   - lightning=2.*
@@ -31,10 +32,10 @@ dependencies:
   - pre-commit=3.*
   - pytest=7.*
   - beartype
-  - numpy=1.* # conflicts with wandb 1.6.6
+  - numpy=2.*
 
   # --------- loggers --------- #
-  - wandb
+  - wandb>=0.17.2 # no lower than 0.17.2, see https://github.com/wandb/wandb/issues/7810
   # - neptune-client
   # - mlflow
   # - comet-ml
