--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -12,7 +12,6 @@ defaults:
   - paths: default
   - extras: default
   - hydra: default
-  - rpu_config: constant_step
 
   # experiment configs allow for version control of specific hyperparameters
   # e.g. best hyperparameters for given model and datamodule
@@ -27,6 +26,9 @@ defaults:
 
   # debugging config (enable through command line, e.g. `python train.py debug=default)
   - debug: null
+
+  # aihwkit config
+  - rpu_config: null
 
 # task name, determines output directory path
 task_name: "train"
@@ -50,5 +52,3 @@ ckpt_path: null
 seed: 42
 
 compile: null
-
-is_analog: False
