chore: Add jaxtyping for torch&numpy type hints

--- a/requirements.txt
+++ b/requirements.txt
@@ -18,4 +18,5 @@ pre-commit      # hooks for applying linters on commit
 rich            # beautiful text formatting in terminal
 pytest          # tests
 beartype        # runtime type checking
+jaxtyping       # type hints for torch & numpy
 # sh            # for running bash commands in some tests (linux/macos only)
