--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -82,6 +82,7 @@ repos:
             "E203,E402,E501,F401,F841,RST2,RST301",
             "--exclude",
             "logs/*,data/*",
+            "--per-file-ignores=src/prog_scheme/kalman.py:F821",
           ]
         additional_dependencies: [flake8-rst-docstrings==0.3.0]
 
