--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -6,6 +6,7 @@ defaults:
   - _self_
   - data: mnist
   - model: mnist
+  - aihw: null
   - callbacks: default
   - logger: wandb # set logger here or use command line (e.g. `python train.py logger=tensorboard`)
   - trainer: default
