--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,7 @@ wandb
 # aim>=3.16.2  # no lower than 3.16.2, see https://github.com/aimhubio/aim/issues/2550
 
 # --------- others --------- #
+aihwkit>=0.9.1
 rootutils       # standardizing the project root setup
 pre-commit      # hooks for applying linters on commit
 rich            # beautiful text formatting in terminal
