FIX: Rename types module to avoid np circ import
Also update imports; add mypy configuration

--- a/pants.toml
+++ b/pants.toml
@@ -10,9 +10,13 @@ backend_packages = [
 
 [source]
 root_patterns = [
+    "/configs",
     "/src",
     "/tests",
 ]
+
+[mypy]
+args = ["--linecount-report=reports"]
 
 [python]
 interpreter_constraints = [">=3.10.*"]
