--- a/environment-cpu.yaml
+++ b/environment-cpu.yaml
@@ -9,7 +9,6 @@ name: ml
 
 channels:
   - pytorch
-  - conda-forge
   - defaults
 
 # it is strongly recommended to specify versions of packages installed through conda
@@ -21,13 +20,13 @@ channels:
 # compatibility is usually guaranteed
 
 dependencies:
-  - aihwkit>=0.9.1
+  - aihwkit
   - python>=3.10
-  - cpuonly
-  - pytorch=2.* #
-  - torchvision
+  - pytorch::pytorch>=2 # conda-forge version installs with CUDA
+  - pytorch::torchvision
   - lightning=2.*
   - torchmetrics
+  - pytorch::cpuonly
   - hydra-core=1.3.*
   - rich=13.*
   - pre-commit=3.*
@@ -36,7 +35,7 @@ dependencies:
   - numpy=2.*
 
   # --------- loggers --------- #
-  - wandb>=0.17.2 # no lower than 0.17.2, see https://github.com/wandb/wandb/issues/7810
+  - conda-forge::wandb>=0.17.2 # no lower than 0.17.2, see https://github.com/wandb/wandb/issues/7810
   # - neptune-client
   # - mlflow
   # - comet-ml
