--- a/environment.yaml
+++ b/environment.yaml
@@ -21,10 +21,10 @@ channels:
 # compatibility is usually guaranteed
 
 dependencies:
-  - aihwkit-gpu
-  - python>=3.10
-  - pytorch>=2.0 #currently only supports conda-forge version
-  - pytorch::pytorch-cuda=11.8 # aihw depends on this version (no later tha 12.0)
+  - aihwkit>=0.9.1 #aihwkit-gpu has a compatibility issue for now
+  - python==3.10
+  - pytorch::pytorch>=2.0 # currently only supports conda-forge version
+  - pytorch::pytorch-cuda=11.8 # aihw depends on this version (no later than 12.0)
   - pytorch::torchvision
   - lightning=2.*
   - torchmetrics
@@ -33,7 +33,7 @@ dependencies:
   - pre-commit=3.*
   - pytest=7.*
   - beartype
-  - numpy=2.*
+  - numpy=1.*
 
   # --------- loggers --------- #
   - conda-forge::wandb>=0.17.2 # no lower than 0.17.2, see https://github.com/wandb/wandb/issues/7810
