--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,10 @@
 [build-system]
-requires = ["setuptools>=42", "wheel"]
+requires = ["setuptools>=42"]
 build-backend = "setuptools.build_meta"
 
 [project]
 name = "src"
-version = "0.0.1"
+version = "0.1.0"
 requires-python = ">=3.10"
 description = "NMDL ML Codebase"
 urls = { "Homepage" = "https://github.com/nmdlkg/ml/" }
@@ -38,6 +38,9 @@ exclude_lines = [
     "raise NotImplementedError()",
     "if __name__ == .__main__.:",
 ]
+
+[tool.setuptools]
+packages = ["src","configs"]
 
 [tool.ruff]
 line-length = 100
