fix: refine env dependencies for compatibility

--- a/environment.yaml
+++ b/environment.yaml
@@ -21,8 +21,8 @@ channels:
 # compatibility is usually guaranteed
 
 dependencies:
-  - aihwkit>=0.9.1 #aihwkit-gpu has a compatibility issue for now
-  - python==3.10
+  - aihwkit # currenty aihwkit-gpu has a compatibility issue with pytorch
+  - python>=3.10, <3.12 # aihwkit requires no later than 3.12
   - pytorch::pytorch>=2.0 # currently only supports conda-forge version
   - pytorch::pytorch-cuda=11.8 # aihw depends on this version (no later than 12.0)
   - pytorch::torchvision
@@ -33,7 +33,7 @@ dependencies:
   - pre-commit=3.*
   - pytest=7.*
   - beartype
-  - numpy=1.*
+  - numpy=1.* # aihwkit requires numpy 1
 
   # --------- loggers --------- #
   - conda-forge::wandb>=0.17.2 # no lower than 0.17.2, see https://github.com/wandb/wandb/issues/7810
