--- a/configs/model/mnist.yaml
+++ b/configs/model/mnist.yaml
@@ -1,10 +1,13 @@
 _target_: src.models.classifier_module.ClassifierModule
 
-defaults:
-  - loss: cross_entropy
-  - optimizer: adam
-  - scheduler: null
-  - _self_
+optimizer:
+  _target_: torch.optim.Adam
+  _partial_: true
+  lr: 0.001
+  weight_decay: 0.0
+
+loss:
+  _target_: torch.nn.CrossEntropyLoss
 
 net:
   _target_: src.models.components.simple_dense_net.SimpleDenseNet
