--- a/configs/paths/default.yaml
+++ b/configs/paths/default.yaml
@@ -9,10 +9,8 @@ data_dir: ${paths.root_dir}/data/
 # path to logging directory
 log_dir: ${paths.root_dir}/logs/
 
-# path to output directory, created dynamically by hydra
-# path generation pattern is specified in `configs/hydra/default.yaml`
-# use it to store all files generated during the run, like ckpts and metrics
-output_dir: ${hydra:runtime.output_dir}
+# path to output directory
+output_dir: ${paths.root_dir}/outputs/
 
 # path to working directory
 work_dir: ${hydra:runtime.cwd}
