--- a/configs/trainer/default.yaml
+++ b/configs/trainer/default.yaml
@@ -2,14 +2,14 @@ _target_: lightning.pytorch.trainer.Trainer
 
 default_root_dir: ${paths.output_dir}
 
-min_epochs: 1 # prevents early stopping
+min_epochs: 1
 max_epochs: 10
 
 accelerator: auto
 devices: 1
 
 # mixed precision for extra speed-up
-# precision: 16
+precision: 16
 
 # perform a validation loop every N training epochs
 check_val_every_n_epoch: 1
