--- a/configs/data/mnist.yaml
+++ b/configs/data/mnist.yaml
@@ -1,7 +1,16 @@
+defaults:
+  - _self_
+
 _target_: src.data.mnist_datamodule.MNISTDataModule
+_recursive_: false
 
 data_dir: ${paths.data_dir}/MNIST
 train_val_test_split: [55_000, 5_000, 10_000]
 batch_size: 64
 num_workers: 0
 pin_memory: False
+
+transforms:
+  _target_: torchvision.transforms.Compose
+  transforms:
+    - _target_: torchvision.transforms.ToTensor
